--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="homepage-container">
         <header>
           <div class="logo">
-            MeShop.
+            eShop
           </div>
           <div class="nav-items">
             <a href="./">Home</a>
@@ -23,7 +23,7 @@
         </header>
         <main>
         <div class="homepage-details">
-         <h3>MeShop.</h3>
+         <h3>eShop</h3>
          <p>Your First Shop built on HTML,CSS AND JavaScript</p>
          <div class="homepage-buttons">
             <a href="./login/"><button style="background-color:#000000;color:#FFFFFF">Login</button></a>
