--- a/profile/index.html
+++ b/profile/index.html
@@ -13,7 +13,7 @@
     <div class="profile-container">
         <header>
             <div class="logo">
-                MeShop.
+                eShop
             </div>
             <div class="nav-items">
                 <a href="../">Home</a>
