--- a/cart/index.html
+++ b/cart/index.html
@@ -14,7 +14,7 @@
 
     <header>
       <div class="logo">
-        MeShop.
+        eShop
       </div>
       <div class="nav-items">
         <a href="../">Home</a>
