--- a/shop/index.html
+++ b/shop/index.html
@@ -11,7 +11,7 @@
     <div class="shopPage-container">
         <header>
             <div class="logo">
-                MeShop.
+                eShop
             </div>
             <div class="nav-items">
               <a href="../">Home</a>
