--- a/signup/index.html
+++ b/signup/index.html
@@ -11,7 +11,7 @@
     <div class="signup-container">
         <header>
           <div class="logo">
-            MeShop.
+            eShop
           </div>
           <div class="nav-items">
             <a href="../">Home</a>
